--- a/html/home.html
+++ b/html/home.html
@@ -25,9 +25,9 @@
 
                 <div id="mySidepanel" class="sidepanel">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="#" class="sideTags"><i class="fas fa-home icon" style="color: gray"></i>Home</a>
-                    <a href="#" class="sideTags"><i class="fas fa-tachometer-alt icon" style="color: gray"></i>Dashboard</a>                      Dashboard</a>
-                    <a href="#" class="sideTags"><i class="fas fa-book icon" style="color: gray"></i>My Courses</a>
+                    <a href="/html/login.html" class="sideTags"><i class="fas fa-home icon" style="color: gray"></i>Home</a>
+                    <a href="/html/dashboard.html" class="sideTags"><i class="fas fa-tachometer-alt icon" style="color: gray"></i>Dashboard</a>                      Dashboard</a>
+                    <a href="/html/course.html" class="sideTags"><i class="fas fa-book icon" style="color: gray"></i>My Courses</a>
                     <a href="#" class="sideTags"><i class="fas fa-shopping-cart icon" style="color: gray"></i>Purchases</a>
                     <a href="#" class="sideTags"><i class="fas fa-trophy icon"style="color: gray"></i>Leaderboards</a>
                     <a href="#" class="sideTags"><i class="fas fa-info-circle icon" style="color: gray"></i>About Us</a>
