--- a/html/course.html
+++ b/html/course.html
@@ -25,7 +25,7 @@
 
                 <div id="mySidepanel" class="sidepanel">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="/html/home.html" class="sideTags"><i class="fas fa-home icon" style="color: gray"></i>Home</a>
+                    <a href="/html/login.html" class="sideTags"><i class="fas fa-home icon" style="color: gray"></i>Home</a>
                     <a href="/html/dashboard.html" class="sideTags"><i class="fas fa-tachometer-alt icon" style="color: gray"></i>Dashboard</a>                      Dashboard</a>
                     <a href="#" class="sideTags"><i class="fas fa-book icon" style="color: gray"></i>My Courses</a>
                     <a href="#" class="sideTags"><i class="fas fa-shopping-cart icon" style="color: gray"></i>Purchases</a>
